--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <title> Umi-no-Yamaneko GitHub Pages</head>
+      <title> Umi-no-Yamaneko GitHub Pages</title>
     </head>
     <body>
     <p>Hello!</p>
