--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
       <title> Umi-no-Yamaneko GitHub Pages</title>
     </head>
     <body>
-    <p>Hello!</p>
+    <p>root</p>
     </body>
   </html>
