--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,6 @@
       <title> Umi-no-Yamaneko GitHub Pages</titile>
     </head>
     <body>
-    <p>Hello!</p>
+    <p>src</p>
     </body>
   </html>
