--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <title> Umi-no-Yamaneko GitHub Pages</title>
     </head>
     <body>
-    <p>root</p>
+    <p>Location: root</p>
+      <p>Welcome!</p>
     </body>
   </html>
