--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <title> Umi-no-Yamaneko GitHub Pages</title>
-    </head>
-    <body>
-    <p>Location: root</p>
-      <p>Welcome!</p>
-    </body>
-  </html>
+    <html>
+        <head>
+            <title>Portfolio | Umi-no-Yamaneko Official Site</title>
+            <link href="./css/style_main.css" rel="stylesheet" type="text/css">
+        </head>
+        <body>
+            <div class="main">
+                <div class="header">
+                    <div class="header-title"><a href="/">Umi-no-Yamaneko Portfolio</a></div>
+                    <div class="liContainer">
+                        <li><a href="/">TOP</a></li>
+                    </div>
+                </div>
+                <div class="main">
+                    <div class="wrap">
+                        <div class="linkbox-navi">
+                            <a href="https://umi-no-yamaneko.jp">Official Site</a>
+                        </div>
+                        <div class="linkbox-navi">
+                            <a href="https://github.umi-no-yamaneko.jp">GitHub Pages</a>
+                        </div>
+                    </div>
+                </div>
+                <p>※内部インフラ等非公開の成果物に関しては別途お問い合わせください</p>
+                <div class="footer">
+                    <p>うみのやまねこ Umi-no-Yamaneko</p>
+                </div>
+            </div>
+        </body>
+    </html>
