--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
                     <div class="header-title"><a href="/">Umi-no-Yamaneko Portfolio</a></div>
                     <div class="liContainer">
                         <li><a href="/">TOP</a></li>
+                        <li><a href="https://link.umi-no-yamaneko.jp">LINK</a></li>
                     </div>
                 </div>
                 <div class="main">
