--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
     <html>
         <head>
+            <meta name="viewport" content="width=device-width,initial-scale=1">
             <title>Portfolio | Umi-no-Yamaneko Official Site</title>
             <link href="./css/style_main.css" rel="stylesheet" type="text/css">
         </head>
