--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
                             <a href="https://umi-no-yamaneko.jp">Official Site</a>
                         </div>
                         <div class="linkbox-navi">
-                            <a href="https://github.umi-no-yamaneko.jp">GitHub Pages</a>
+                            <a href="https://qiita.com/uminoyamaneko">Qiita</a>
+                        </div>
+                        </div>
+                        <div class="linkbox-navi">
+                            <a href="https://github.com/umi-no-yamaneko">GitHub</a>
                         </div>
                     </div>
                 </div>
