--- a/index.html
+++ b/index.html
@@ -1,35 +1,65 @@
 <!DOCTYPE html>
     <html>
         <head>
+            <meta charset="UTF-8">
+            <title>LINK | Umi-no-Yamaneko Official Site</title>
             <meta name="viewport" content="width=device-width,initial-scale=1">
-            <title>Portfolio | Umi-no-Yamaneko Official Site</title>
             <link href="./css/style_main.css" rel="stylesheet" type="text/css">
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
         </head>
         <body>
             <div class="main">
-                <div class="header">
-                    <div class="header-title"><a href="/">Umi-no-Yamaneko Portfolio</a></div>
-                    <div class="liContainer">
-                        <li><a href="/">TOP</a></li>
-                        <li><a href="https://link.umi-no-yamaneko.jp">LINK</a></li>
-                    </div>
-                </div>
-                <div class="main">
+                    <!--
                     <div class="wrap">
-                        <div class="linkbox-navi">
-                            <a href="https://umi-no-yamaneko.jp">Official Site</a>
-                        </div>
-                        <div class="linkbox-navi">
-                            <a href="https://qiita.com/uminoyamaneko">Qiita</a>
-                        </div>
-                        <div class="linkbox-navi">
-                            <a href="https://github.com/umi-no-yamaneko">GitHub</a>
-                        </div>
+                        <div id="top-gallery-01"></div>
+                        <div id="top-gallery-02"></div>
                     </div>
+                    -->
+                    <div class="wrapper-right">
+                        <div class="content-title-wrapper-ringht">WELCOME!!</div>
+                            <div class="wrapper-right-content">
+                                <p>うみのやまねこ の各アカウントへのリンク集です</p>
+                            </div>
+                    </div>
+                    <!--
+                    <div class="wrapper-left">
+                        <div class="content-title-wrapper-left">CONTENTS</div>
+                            <div class="wrapper-left-content">
+                                <div class="wrap">
+                                    <div class="linkbox-navi">
+                                        <a href="https://www.google.com">hoge</a>
+                                    </div>
+                                    <div class="linkbox-navi">
+                                        <a href="https://www.google.com">hoge</a>
+                                    </div>
+                                    <div class="linkbox-navi">
+                                        <a href="https://www.google.com">hoge</a>
+                                    </div>
+                                    <div class="linkbox-navi">
+                                        <a href="https://www.google.com">hoge</a>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+                    -->
+            </div>
+            <div class="header">
+                <div class="header-title"><a href="/">やまね工房(LAB)</a></div>
+                <div class="liContainer">
+                    <li><a href="/">TOP</a></li>
+                    <li><a href="https://twitter.com/Umi_no_Yamaneko">X(twitter)</a></li>
+                    <li><a href="https://www.pixiv.net/users/49389005">pixiv</a></li>
+                    <li><a href="https://github.com/umi-no-yamaneko">GitHub</a></li>
+                    <li><a href="https://umi-no-yamaneko.jp/">misskey.io</a></li>
+                    <li><a href="https://nijimiss.moe/@UmiNoYamaneko">nijimiss.moe</a></li>
+                    <li><a href="https://vrchat.com/home/user/usr_00003e54-cb1e-45ff-a824-5e9487ea2116">VRChat</a></li>
+                    <li><a href="https://qiita.com/uminoyamaneko">Qiita</a></li>
+                    <li><a href="https://cluster.mu/u/Umi_no_Yamaneko">Cluster</a></li>
                 </div>
-                <p>※内部インフラ等非公開の成果物に関しては別途お問い合わせください</p>
                 <div class="footer">
-                    <p>うみのやまねこ Umi-no-Yamaneko</p>
+                    <p>&copy;うみのやまねこ Umi-no-Yamaneko</p>
                 </div>
             </div>
         </body>
