test external storage

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                             </div>
                     </div>
                     -->
+                    <img src="https://storage.umi-no-yamaneko.jp/test/img.png" alt="penguin" width="100%" />
             </div>
             <div class="header">
                 <div class="header-title"><a href="/">やまね工房(LAB)</a></div>
