test github cdn

--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
                                 <p>サンプルページ</p>
                             </div>
                     </div>
-                    <img src="https://test-r2.umi-no-yamaneko.jp/testdir/photo.JPG" alt="penguin" width="100%" />
+                    <img src="./photo.JPG" alt="penguin" width="100%" />
             </div>
             <div class="header">
                 <div class="header-title"><a href="/">サンプルヘッダー</a></div>
